changed button colors and fixed some links...took out the damn trash and now you're in for it

--- a/views/aboutDE.hbs
+++ b/views/aboutDE.hbs
@@ -73,13 +73,13 @@
     <!-- Language Links -->
     <ul class="navbar-nav mr-auto navbar-right list-inline" style="margin-left: 30px;">
         <li class="nav-item list-item-inline">
-            <a class="nav-link" href="/contact"><span class="flag-icon flag-icon-us"></span></a>
+            <a class="nav-link" href="/about"><span class="flag-icon flag-icon-us"></span></a>
         </li>
         <li class="nav-item list-item-inline">
-            <a class="nav-link" href="/contactCN"><span class="flag-icon flag-icon-cn"></span></a>
+            <a class="nav-link" href="/aboutCN"><span class="flag-icon flag-icon-cn"></span></a>
         </li>
         <li class="nav-item list-item-inline">
-            <a class="nav-link" href="/contactFR"><span class="flag-icon flag-icon-fr"></span></a>
+            <a class="nav-link" href="/aboutFR"><span class="flag-icon flag-icon-fr"></span></a>
         </li>
     </ul>
         <!-- Links -->
@@ -131,20 +131,20 @@
                 <!--Education Section-->
                 <div class="panel panel-default">
                     <div class="panel panel-header">
-                        Education<i class="glyphicon glyphicon-education"></i>
+                        Ausbildung<i class="glyphicon glyphicon-education"></i>
                     </div>
                     <div class="panel panel-body" id="education">
                         <ul class="list-inline">
                             <li class="list-inline-item" id="KU">
-                                <h4 id="KUTitle">The University of Kansas</h4>
+                                <h4 id="KUTitle">Universität von Kansas</h4>
 
-                                Coding Boot Camp - Full-Stack Web Development
+                                Coding Boot Camp - Full-Stack-Webentwicklung
                                 <br />
-                                June 2017 - May 2018
+                                Juni 2017 - Mai 2018
                             </li>
                             <br />
                             <li class="list-inline-item" id="UCSD">
-                                <h4 id="UCSDTitle">The University of California, San Diego</h4>
+                                <h4 id="UCSDTitle">Die Universität von Kalifornien, San Diego</h4>
 
                                 B.S. Political Science (Minor - International Relations)
                                 <br />
@@ -154,9 +154,9 @@
                             <li class="list-inline-item" id="FullColl">
                                 <h4 id="FullCollTitle">Fullerton College</h4>
 
-                                A.A. Film/Radio/Television
+                                A.A. Filme/Radio/Fernsehen
                                 <br />
-                                January 2009 - May 2012
+                                Janjuar 2009 - Mai 2012
                             </li>
                         </ul>
                     </div>
@@ -166,26 +166,26 @@
                 <!--Beginning Experience-->
                 <div class="panel panel-default">
                     <div class="panel panel-header">
-                        Experience<i class="glyphicon glyphicon-ok"></i>
+                        Erfahrung<i class="glyphicon glyphicon-ok"></i>
                     </div>
                     <div class="panel panel-body" id="education">
                         <ul class="list-inline">
                             <li class="list-inline-item" id="KU">
                                 <h4 id="KUTitle">Zhejiang University of Technology (浙江工业大学）</h4>
 
-                                University Professor - Web Design
+                                Universität Professor - Webentwicklung
                                 <br />
-                                June 2018 - June 2019
+                                Juni 2018 - Juni 2019
                                 <br />
                                 I formulated, implemented, and managed my own curriculum covering the basics of HTML5, CSS3, Javascript, and JQuery in the English language. My students were majoring in software engineering and thusly it was important for them to acquire essential language skills in both coding and communication.
                             </li>
                             <br />
                             <li class="list-inline-item" id="UCSD">
-                                <h4 id="UCSDTitle">Kansas University</h4>
+                                <h4 id="UCSDTitle">Kansas Universität</h4>
 
-                                48 Week Full-Stack Coding Bootcamp
+                                48 Woche Bootcamp für Full-Stack-Codierung
                                 <br />
-                                June 2017 - May 2018
+                                Juni 2017 - Mai 2018
                                 <br />
                                 During the course of the program we studied, utilized, and developed essential elements of of websites as well as entire websites based on those elements. The program was comprehensive and progressive so that we learned the basic building blocks of a website then worked our way up to building entire websites utilizing all of those elements working collaboratively.
                             </li>
@@ -193,9 +193,9 @@
                             <li class="list-inline-item" id="FullColl">
                                 <h4 id="FullCollTitle">Fullerton College</h4>
 
-                                2011 Berlin Study Abroad Program Promotional Video
+                                2011 Berlin Study Abroad Program Werbevideo
                                 <br />
-                                Spring 2011
+                                Frühling 2011
                                 <br />
 
                             </li>
@@ -204,7 +204,7 @@
                 </div>
                 <div class="panel panel-default" style="height: -webkit-fill-available;">
                     <div class="panel panel-header">
-                        Web Development<i class="glyphicon glyphicon-link"></i>
+                        Webentwicklung<i class="glyphicon glyphicon-link"></i>
                     </div>
                     <div class="panel panel-body" id="codingLanguages">
                         <ul class="list-inline">
@@ -217,7 +217,7 @@
                 </div>
                 <div class="panel panel-default">
                     <div class="panel panel-header">
-                        Travels<i class="glyphicon glyphicon-globe"></i>
+                        Reisen<i class="glyphicon glyphicon-globe"></i>
                     </div>
                     <div class="panel panel-body" id="travels">
                         <ul class="list-inline">
@@ -227,31 +227,31 @@
                                 </h3>
                             </li>
                             <li class="list-inline-item">
-                                <h4 id="nAmericaTitle">North America</h4>
-                                Canada, U.S.A. (States) - Arizona, Arkansas, California, Colorado, Idaho, Illinois, Iowa, Kansas, Kentucky, Maryland, Minnesota, Missouri, Montana, Nebraska, Nevada, New Mexico, North Dakota, Oregon, South Dakota, Tennessee, Texas, Utah, Virginia, Washington, Washington D.C., Wyoming
+                                <h4 id="nAmericaTitle">Nord Amerika</h4>
+                                Kanada, USA (Bundesstaaten) - Arizona, Arkansas, Kalifornien, Colorado, Idaho, Illinois, Iowa, Kansas, Kentucky, Maryland, Minnesota, Missouri, Montana, Nebraska, Nevada, New Mexico, North Dakota, Oregon, South Dakota, Tennessee, Texas, Utah, Virginia, Washington, Washington D.C., Wyoming
                             </li>
                             <li class="list-inline-item">
                                 <h4 id="europeTitle">Europe</h4>
-                                Austria, Belgium, Bulgaria, Czech Republic, England, France, Germany, Greece, Hungary, Ireland, Italy, Monaco, Netherlands, Romania, Scotland, Spain, Switzerland, Vatican City
+                                Österreich, Belgien, Bulgarien, Tschechische Republik, England, Frankreich, Deutschland, Griechenland, Ungarn, Irland, Italien, Monaco, Niederlande, Rumänien, Schottland, Spanien, Die Schweiz, Vatikanstadt
                             </li>
                             <li class="list-inline-item">
                                 <h4 id="asiaTitle">Asia</h4>
-                                China, Hong Kong, Japan, Macau, Philippines, Thailand, and Vietnam
+                                China, Hong Kong, Japan, Macau, Philippinen, Thailand, and Vietnam
                             </li>
                         </ul>
                     </div>
                 </div>
                 <div class="panel panel-default">
                     <div class="panel panel-header">
-                        Languages<i class="glyphicon glyphicon-stats"></i>
+                        Sprachen<i class="glyphicon glyphicon-stats"></i>
                     </div>
                     <div class="panel panel-body" id="languages">
                         <ul class="list-inline">
                             <li class="list-inline-item" id="languagesList">
-                                <h4 id="English">English - Native Language</h4>
-                                <h4 id="German">German/Deutsch - B1/B2</h4>
-                                <h4 id="French">French/Français - B1/B2</h4>
-                                <h4 id="Chinese">Chinese/中文 - A1</h4>
+                                <h4 id="English">Englisch - Native Language</h4>
+                                <h4 id="German">Deutsch - B1/B2</h4>
+                                <h4 id="French">Franzözisch - B1/B2</h4>
+                                <h4 id="Chinese">Chinesisch - A1</h4>
                             </li>
                         </ul>
                     </div>
