--- a/views/contactDE.hbs
+++ b/views/contactDE.hbs
@@ -42,7 +42,7 @@
 
 <!--Dropdown for site navigation-->
 <div class="dropdown">
-    <button class="btn btn-light btn-large dropdown-toggle" type="button" id="nav-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    <button class="btn btn-dark btn-large dropdown-toggle" type="button" id="nav-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         Seitennavigation
     </button>
 
@@ -87,11 +87,11 @@
                 <a class="nav-link glyphicon glyphicon-home" href="/homeDE"></a>
             </li>
             <li class="nav-item list-item-inline">
-                <a class="nav-link glyphicon glyphicon-envelope" href="/aboutDE">
+                <a class="nav-link glyphicon glyphicon-envelope" href="/contactDE">
                 </a>
             </li>
             <li class="nav-item list-item-inline">
-                <a class="nav-link glyphicon glyphicon-book" href="/contactDE"></a>
+                <a class="nav-link glyphicon glyphicon-book" href="/aboutDE"></a>
             </li>
         </ul>
         <!-- links -->
@@ -101,7 +101,7 @@
         <!-- <div class="row main-content"> -->
         <div class="col-xs-12 col-sm-12 col-md-8 col-md-offset-1 col-lg-5 col-lg-offset-1">
             <div class="panel panel-default" style="background-color: white; border: solid lightgray 1px;">
-                <div class="panel panel-header text-center" style="color: #00b8e6;">Contact<i class="glyphicon glyphicon-envelope"></i></div>
+                <div class="panel panel-header text-center" style="color: #00b8e6;">Kontakt<i class="glyphicon glyphicon-envelope"></i></div>
                 <div class="panel panel-body">
 
                     <!-- Form contact -->
@@ -142,5 +142,5 @@
         </div>
     </div>
     <footer class="footer sunny-morning-gradient">
-        © Copyright 2019 Eric Willard
+        © Eric Willard
     </footer>
