--- a/views/experienceFR.hbs
+++ b/views/experienceFR.hbs
@@ -73,6 +73,9 @@
             <a class="nav-link" href="/experience"><span class="flag-icon flag-icon-us"></span></a>
         </li>
         <li class="nav-item list-item-inline">
+            <a class="nav-link" href="/experienceCN"><span class="flag-icon flag-icon-cn"></span></a>
+        </li>
+        <li class="nav-item list-item-inline">
             <a class="nav-link" href="/experienceDE"><span class="flag-icon flag-icon-de"></span></a>
         </li>
     </ul>
