--- a/views/webPortDE.hbs
+++ b/views/webPortDE.hbs
@@ -43,7 +43,7 @@
 
 <!--Dropdown for site navigation-->
 <div class="dropdown">
-    <button class="btn btn-light btn-large dropdown-toggle" type="button" id="nav-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    <button class="btn btn-dark btn-large dropdown-toggle" type="button" id="nav-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         Seitennavigation
     </button>
 
@@ -71,6 +71,9 @@
     <ul class="navbar-nav mr-auto navbar-right list-inline" style="margin-left: 30px;">
         <li class="nav-item list-item-inline">
             <a class="nav-link" href="/webPort"><span class="flag-icon flag-icon-us"></span></a>
+        </li>
+        <li class="nav-item list-item-inline">
+            <a class="nav-link" href="/webPortCN"><span class="flag-icon flag-icon-cn"></span></a>
         </li>
         <li class="nav-item list-item-inline">
             <a class="nav-link" href="/webPortFR"><span class="flag-icon flag-icon-fr"></span></a>
