--- a/views/contactFR.hbs
+++ b/views/contactFR.hbs
@@ -107,7 +107,7 @@
                     <!-- Form contact -->
                     <form action="MAILTO:ewill2020@gmail.com" method="post" enctype="text/plain">
                         <div class="form-group">
-                            <label for="form3">Your Name</label>
+                            <label for="form3">Votre Nom</label>
                             <input type="text" name="name" id="form3" class="form-control">
 
                         </div>
