moved custom css to different position on main.hbs

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -11,7 +11,8 @@
 
     <!-- Favicon link -->
     <link rel="icon" type="image/ico" href="../Images/ewillicon3.png">
-    
+    <!-- Your custom styles (optional) -->
+    <link href="/css/style.css" rel="stylesheet">
     <!--Google Font-->
     <link href="https://fonts.googleapis.com/css?family=Acme&display=swap" rel="stylesheet">
 
