--- a/views/webPortDE.hbs
+++ b/views/webPortDE.hbs
@@ -111,14 +111,14 @@
                 <img class="card-img-top img-fluid" id="tat" src="../Images/tatUI.png">
                     <div class="mask flex-center rgba-blue-strong">
                         <p class="white-text">
-                            Your one-stop website for all the travel knowledge you need to become less of a tourist and more of an adaptive traveler...
+                            Ihre One-Stop-Website für all das Reisewissen, das Sie brauchen, um weniger ein Tourist zu sein als ein anpassungsfähiger Reisender ...
                         </p>
                     </div>
                 </div>
                 <!--end hover description-->
 
                 <div class="card-body">
-                <p id="card-text">The Adaptive Traveler</p>
+                <p id="card-text">Der Adaptive Reisender</p>
                 </div>
             </div></a>
         </div>
@@ -135,7 +135,7 @@
                 <img class="card-img-top img-fluid" id="clicktrip" src="../Images/clicktripUI.png">
                 <div class="mask flex-center rgba-blue-strong">
                     <p class="white-text">
-                        A website designed for those that love to take photographs while traveling.  This site specializes in the off-the-beaten-path photo locations not as widely known about by most travelers.
+                       Eine Website für alle, die gerne auf Reisen fotografieren. Diese Seite ist spezialisiert auf abgelegene Fotostandorte, über die die meisten Reisenden nicht so viel wissen.
                     </p>
                 </div>
             </div>
@@ -156,14 +156,14 @@
                 <img class="card-img-top img-fluid" id="inPhotos" src="../Images/IPLOGO.jpg">
                     <div class="mask flex-center rgba-blue-strong">
                         <p class="white-text">
-                             A website where one can order several different styles of prints ranging from acrylic, to aluminum, and more.  The website is only applicable in Mainland China.
+                             Eine Website, auf der Sie verschiedene Druckstile von Acryl über Aluminium und mehr bestellen können. Die Website ist nur auf dem chinesischen Festland verfügbar.
                         </p>
                     </div>
             </div>
 
 
                 <div class="card-body">
-                <p id="card-text">Innovative Photos/创新照片</p>
+                <p id="card-text">Innovative Fotos/创新照片</p>
                 </div>
             </div></a>
         </div>
