--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -33,7 +33,7 @@
     <link rel="stylesheet" type="text/css" href="../MDB/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="../MDB/css/mdb.min.css">
     <link rel="stylesheet" type="text/css" href="../MDB/css/style.css">
-    
+    <link rel="stylesheet" type="text/css" href="../bootstrap-material-design/css/style.css">
     <!-- FontAwesome Icons CDN -->
     <link href="https://opensource.keycdn.com/fontawesome/4.7.0/font-awesome.min.css" rel="stylesheet">
        
