--- a/views/home.hbs
+++ b/views/home.hbs
@@ -5,7 +5,7 @@
     <!-- Social Media Contact Links-->
     <ul class="navbar-collapse justify-content-start mr-auto list-inline">
         <li class="nav-item navbar-center list-inline-item">
-            <a class="btn-floatin btn-lg btn-li" type="button" role="button" href="https://www.linkedin.com/in/willarderic/">
+            <a class="btn-floating btn-lg btn-li" type="button" role="button" href="https://www.linkedin.com/in/willarderic/">
                 <i class="fab fa-linkedin-in"></i>
             </a>
         </li>
