--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -34,6 +34,7 @@
     <link rel="stylesheet" type="text/css" href="../MDB/css/mdb.min.css">
     <link rel="stylesheet" type="text/css" href="../MDB/css/style.css">
     <link rel="stylesheet" type="text/css" href="../bootstrap-material-design/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- FontAwesome Icons CDN -->
     <link href="https://opensource.keycdn.com/fontawesome/4.7.0/font-awesome.min.css" rel="stylesheet">
        
