--- a/views/home.hbs
+++ b/views/home.hbs
@@ -5,8 +5,8 @@
     <!-- Social Media Contact Links-->
     <ul class="navbar-collapse justify-content-start mr-auto list-inline">
         <li class="nav-item navbar-center list-inline-item">
-            <a class="fa-linkedin btn-lg" type="button" role="button" href="https://www.linkedin.com/in/willarderic/">
-                <i class="fab fa-linkedin-in"></i>
+            <a href="https://www.linkedin.com/in/willarderic/">
+                <img src="Images/linkedin.png" alt="linkedin" class="linkedin" style="height: 55px; width: 55px;">
             </a>
         </li>
         <li class="nav-item navbar-center list-inline-item">
