translated educationCN page

--- a/views/educationCN.hbs
+++ b/views/educationCN.hbs
@@ -113,7 +113,7 @@
                     <ul style="list-style-type:disc;">
                         <li>编码训练营</li>
                         <li>六月 2017-五月 2018</li>
-                        <li>Intensive 52 week full-stack coding program designed to give students knowledge on a vast array of coding languages as well as constant hands-on experience building their own web apps.</li>
+                        <li>创新照片为期52周的全栈编码程序，旨在为学生提供大量编码语言的知识，以及构建自己的Web应用程序的持续实践经验。</li>
                         <ul>
                 </div>
             </div>
@@ -132,7 +132,7 @@
                     <ul style="list-style-type:disc;">
                         <li>文科学士学位</li>
                         <li>九月 2012-八月 2014</li>
-                        <li>My studies at UCSD consisted heavily of languages, history, and politics. I studied German and French throughout my tenure at UCSD while also obtaining a minor certification in international relations.</li>
+                        <li>我在加州大学圣地亚哥分校的学习主要包括语言，历史和政治。 我在加州大学圣地亚哥分校任职期间学习德语和法语，同时还获得了国际关系方面的小型认证。</li>
                     </ul>
                 </div>
             </div>
@@ -153,7 +153,7 @@
                     <ul style="list-style-type:disc;">
                         <li>艺术助理</li>
                         <li>一月 2009-五月 2012</li>
-                        <li>Am Fullerton College war ich stolz darauf, während 2/3 meines Studiums an der Institution sowohl den Status eines Präsidenten als auch eines Dekans zu erhalten. Ich habe Film studiert, aber auch Deutsch, Französisch und Spanisch studiert und im Alleingang ein Video produziert, um die Abteilung für Auslandsstudien zu promoten. In den folgenden Jahren habe ich sowohl in Paris, Frankreich als auch in Berlin, Deutschland, studiert, was meine Sprachkenntnisse stärkte und mir ein besseres Verständnis für die fremde Kultur verschaffte.</li>
+                        <li>在富勒顿学院，我很自豪能够在2/3的学习期间获得校长和院长的地位。 我学习了电影，还学习了德语，法语和西班牙语，并一手制作了一个视频来推广外国语学系。 在接下来的几年里，我在法国巴黎以及德国柏林学习，这增强了我的语言技能，使我更好地了解了外国文化。</li>
                     </ul>
                 </div>
             </div>
