all chinese pages translated and hopefully links fixed

--- a/views/experienceCN.hbs
+++ b/views/experienceCN.hbs
@@ -109,7 +109,7 @@
                             <ul style="list-style-type:disc;">
                                 <li>教授 - 英语和网络发展</li>
                                 <li>五月 2018-五月 2019</li>
-                                <li>I taught a total of 160 university students the basics of web development in English.  Langauges covered were primarily HTML5, CSS3, Javascript, and JQuery.  It was important for the students to learn both coding and the eseentials of English concurrently as one cannot code in Chinese.
+                                <li>我教了160名大学生英语网络发展的基础知识。 Langauges主要包括HTML5，CSS3，Javascript和JQuery。 由于不能用中文编码，学生同时学习英语编码和学习是非常重要的。
                                 </li>
                             </ul>
                         </div>
@@ -128,7 +128,7 @@
                             <ul style="list-style-type:disc;">
                                 <li>学生 - 全栈Web开发计划</li>
                                 <li>六月 2017-五月 2018</li>
-                                <li>This program consisted of roughly 52 weeks of learning the essentials of full-stack web development.  As the course progressed students built upon what they learned and our projects became increasingly more complex.  Beyond a regular coding program, we had already completed several individual and group projects prior to the end of the course so that we had as close to real-world experience as possible.
+                                <li>该计划包括大约52周的学习全栈Web开发的基本知识。 随着课程的进展，学生们以他们学到的东西为基础，我们的项目变得越来越复杂。 除了常规编码程序之外，我们在课程结束之前已经完成了几个个人和小组项目，以便我们尽可能接近实际经验。
                                 </li>
                             </ul>
                         </div>
