--- a/views/videoCN.hbs
+++ b/views/videoCN.hbs
@@ -105,7 +105,7 @@
                     <img class="card-img-top"><iframe style="width: -webkit-fill-available" height="251px" src="https://www.youtube.com/embed/JAaR5Rurdf4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
                     <div class="card-title">
-                        <p id="card-text">Zhangjiajie National Forest Park by Drone (2016)</p>
+                        <p id="card-text">无人机张家界国家森林公园 (2016)</p>
                     </div>
             </div></a>
         </div>
@@ -118,7 +118,7 @@
                     <img class="card-img-top"><iframe style="width: -webkit-fill-available;" height="251px" src="https://www.youtube.com/embed/rEEGPJSIeHE" frameborder="10" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
                     <div class="card-title">
-                        <p id="card-text">Fullerton College Study Abroad Video (Berlin 2011)</p>
+                        <p id="card-text">富勒顿大学海外留学视频（柏林2011）</p>
                     </div>
             </div></a>
         </div>
@@ -130,7 +130,7 @@
                     <img class="card-img-top"><iframe style="width:-webkit-fill-available;" height="251px" src="https://www.youtube.com/embed/2pFM2N1JNPw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
                     <div class="card-title">
-                        <p id="card-text">Fullerton College Dance Class Video (2010)</p>
+                        <p id="card-text">富乐顿学院舞蹈班视频（2010）</p>
                     </div>
             </div></a>
         </div>
@@ -141,7 +141,7 @@
                     <img class="card-img-top"><iframe style="width: -webkit-fill-available;" height="251px" src="https://www.youtube.com/embed/z7KHWpZpYDo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
                     <div class="card-title">
-                        <p id="card-text">Bier Drei - UCSD German Class Project (2014)</p>
+                        <p id="card-text">Bier Drei  -  UCSD德国班级项目（2014）</p>
                     </div>
             </div></a>
         </div>
@@ -151,7 +151,7 @@
                     <img class="card-img-top"><iframe style="width: -webkit-fill-available;" height="251px" src="https://www.youtube.com/embed/Q2_wPRxTdUo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
                     <div class="card-title">
-                        <p id="card-text">Euro College: Paris Study Abroad Introduction (2012)</p>
+                        <p id="card-text">欧洲学院：巴黎海外学习简介（2012）</p>
                     </div>
             </div></a>
         </div>
@@ -161,7 +161,7 @@
                     <img class="card-img-top"><iframe style="width: -webkit-fill-available;" height="251px" src="https://www.youtube.com/embed/1kc-M1j0bS8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
                     <div class="card-title">
-                        <p id="card-text">Fear and Loathing in Las Vegas Project (2010)</p>
+                        <p id="card-text">拉斯维加斯项目中的恐惧和厌恶（2010）</p>
                     </div>
             </div></a>
         </div>
