--- a/views/webPortCN.hbs
+++ b/views/webPortCN.hbs
@@ -111,7 +111,7 @@
                 <img class="card-img-top img-fluid" id="tat" src="../Images/tatUI.png">
                     <div class="mask flex-center rgba-blue-strong">
                         <p class="white-text">
-                            Your one-stop website for all the travel knowledge you need to become less of a tourist and more of an adaptive traveler...
+                            您的一站式网站，提供您所需的所有旅行知识，使您不再成为一名旅游者，而是更多适应旅行者...
                         </p>
                     </div>
                 </div>
@@ -135,7 +135,7 @@
                 <img class="card-img-top img-fluid" id="clicktrip" src="../Images/clicktripUI.png">
                 <div class="mask flex-center rgba-blue-strong">
                     <p class="white-text">
-                        A website designed for those that love to take photographs while traveling.  This site specializes in the off-the-beaten-path photo locations not as widely known about by most travelers.
+                        一个专为那些喜欢在旅行时拍照的人设计的网站。 这个网站专门为大多数旅行者所熟知的不受欢迎的路径照片位置。
                     </p>
                 </div>
             </div>
@@ -156,7 +156,7 @@
                 <img class="card-img-top img-fluid" id="inPhotos" src="../Images/IPLOGO.jpg">
                     <div class="mask flex-center rgba-blue-strong">
                         <p class="white-text">
-                             A website where one can order several different styles of prints ranging from acrylic, to aluminum, and more.  The website is only applicable in Mainland China.
+                             一个网站，人们可以订购几种不同风格的印刷品，从丙烯酸到铝，等等。 该网站仅适用于中国大陆。
                         </p>
                     </div>
             </div>
